--- a/introducao.tex
+++ b/introducao.tex
@@ -143,7 +143,7 @@ aprendizado é dado previamente pela aplicação (com recomendação automática)
 \esb{cita os artigos/software publicados e submetidos; menciona
 metodologia, compara com Everton e de que forma organiza a área}
 
-\section{Cenário}\label{sec:cenarios}
+\section{Cenário}\label{cenario}
 Existem três principais cenários na literatura de aprendizado ativo
 \citep{settles2010active}:
 \textit{síntese de consulta por associação} ou
