--- a/propostas.tex
+++ b/propostas.tex
@@ -163,9 +163,10 @@ indica uma baixa contribuição da componente exploratória,
 sugerindo que a presença do aprendiz passa a ser relevante ou
 que o aprendizado atingiu o nível de ajuste fino.
 Espera-se que o emprego do aprendiz apenas nos períodos de relevância
-reduza sua influência negativa durante a fase inicial de aprendizado
-e também no caso de algoritmos impróprios para prospecção eventualmente
-empregados equivocadamente.
+reduza sua influência negativa durante a fase inicial de aprendizado,
+ou por todo o aprendizado, no caso de algoritmos que gerem modelos impróprios
+para prospecção no dado problema eventualmente empregados equivocadamente
+pelo usuário.
 \ano{algoritmo}
 
 \input exp-elm
