--- a/apendice2.tex
+++ b/apendice2.tex
@@ -11,73 +11,35 @@ Os valores de acurácia empregados na comparação de algoritmos de aprendizado
 exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0},
 \ref{tab:balaccClassif1} e \ref{tab:balaccClassif2}.
 
-\input classifsTab
+\section{Acurácia das estratégias}
+\esb{Rnd não vence isoladamente em nenhuma das bases com os classificadores selecionados?}
 
-% \section{Acurácia das estratégias}
-% \esb{Rnd não vence isoladamente em nenhuma das bases com os classificadores selecionados.}
-% % só pra base 45 com ielm
- 
 \subsection{5NN}
 \afterpage{\clearpage\begin{landscape}
-\input stratsALCKappa5NNRedux
+\input stratstab5NN
 \end{landscape}\clearpage}
-% % \afterpage{\clearpage\begin{landscape}
-% % \input stratsBalAcc5NN
-% % \end{landscape}\clearpage}
 
 \subsection{C4.5}
 \afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaC4.5wRedux
+\input stratstabC4.5w
 \end{landscape}\clearpage}
-% % \afterpage{\clearpage\begin{landscape}
-% % \input stratsBalAccC4.5
-% % \end{landscape}\clearpage}
 
 \subsection{CIELM}
 \afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaCIELMRedux
+\input stratstabCIELM
 \end{landscape}\clearpage}
-% % \afterpage{\clearpage\begin{landscape}
-% % \input stratsBalAccCIELM
-% % \end{landscape}\clearpage}
-
-\subsection{ELM}
-\afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaELMRedux
-\end{landscape}\clearpage}
-% % \afterpage{\clearpage\begin{landscape}
-% % \input stratsBalAccIELM
-% % \end{landscape}\clearpage}
 
 \subsection{NB}
 \afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaNBRedux
+\input stratstabNB
 \end{landscape}\clearpage}
-% % \afterpage{\clearpage\begin{landscape}
-% % \input stratsBalAccNB
-% % \end{landscape}\clearpage}
 
 \subsection{RF}
 \afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaRFwRedux
+\input stratstabRFw
 \end{landscape}\clearpage}
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsBalAccRF
-% \end{landscape}\clearpage}
-
-% \subsection{VFDT}
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsALCKappaVFDTRedux
-% \end{landscape}\clearpage}
-% % % \afterpage{\clearpage\begin{landscape}
-% % % \input stratsBalAccVFDT
-% % % \end{landscape}\clearpage}
 
 \subsection{SVM}
 \afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaSVMRedux
+\input stratstabSVM
 \end{landscape}\clearpage}
-% % \afterpage{\clearpage\begin{landscape}
-% % \input stratsBalAccSVM
-% % \end{landscape}\clearpage}
-
